Squashed commit of the following:
(cherry picked from commit 2fa4e6b07e2091ba8e14cd11611b5d0048b110de)

Refactors for continous integration